# Blockchain_Anomaly_Agent

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  request.json
app/: agent_service.py  logging_config.py  main.py  tools.py  vector_store_client.py
knowledge_base/: blockchain.md  common_anomalies.csv
qdrant/: dockerfile
scripts/: ingest_data.py
