[project]
name = "rag-chatbot-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "NDPhuu",email = "ducphu.tc10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "numpy (<2.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "langchain (==0.2.0)",
    "langchain-community (==0.2.0)",
    "qdrant-client (==1.9.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
